--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plotly.js",
-  "version": "1.58.1-j5int",
+  "version": "1.58.1-j5int.2",
   "description": "The open source javascript graphing library that powers plotly",
   "license": "MIT",
   "main": "./lib/index.js",
